--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ ezdxf = "*"
 dxfgrabber = "*"
 
 [dev-packages]
+pre-commit = "*"
+coala = "*"
+coala-bears = "*"
 
 [requires]
 python_version = "3.6"
